fix: side bar flickering bug

--- a/src/styles/components/_cards-content.scss
+++ b/src/styles/components/_cards-content.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   grid-area: cards;
   align-items: center;
+  width: 100%;
 }
 .product__cards {
   display: flex;
