--- a/src/styles/components/_catalog-aside.scss
+++ b/src/styles/components/_catalog-aside.scss
@@ -1,5 +1,6 @@
 .catalog__aside {
   display: flex;
+  min-width: 25%;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
