--- a/src/styles/pages/_catalog.scss
+++ b/src/styles/pages/_catalog.scss
@@ -1,5 +1,5 @@
 .catalog__wrapper {
-  display: grid;
+  display: flex;
   justify-content: center;
   max-width: 120rem;
   margin: 0 auto;
